// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenAPIGenerator Petstore OpenAPI spec generates complete TypeScript output: petstore-complete-output 1`] = `
"import { z } from "zod";

// Generated Zod Schemas

export const Pet = z.object({
  id: z.number().int(),
  name: z.string(),
  tag: z.string().optional(),
});

export type Pet = z.infer<typeof Pet>;

export const Pets = z.array(Pet);

export type Pets = z.infer<typeof Pets>;

export const Error = z.object({
  code: z.number().int(),
  message: z.string(),
});

export type Error = z.infer<typeof Error>;

// Path Functions
export const paths = {
  listPets: () => "/pets",
  createPets: () => "/pets",
  showPetById: ({ petId }: { petId: string }) => \`/pets/\${petId}\`,
} as const;

// Operation Objects
export const listPets = {
  path: paths.listPets,
  response: Pets,
} as const;

export const createPets = {
  path: paths.createPets,
  request: Pet,
} as const;

export const showPetById = {
  path: paths.showPetById,
  response: Pet,
} as const;
"
`;

exports[`OpenAPIGenerator Edge cases handles spec with no components: no-components-spec-output 1`] = `
"import { z } from "zod";

// Path Functions
export const paths = {
  getTest: () => "/test",
} as const;

// Operation Objects
export const getTest = {
  path: paths.getTest,
} as const;
"
`;

exports[`OpenAPIGenerator Edge cases handles circular dependencies gracefully: circular-dependencies-output 1`] = `
"import { z } from "zod";

// Generated Zod Schemas

export const B = z.object({
  a: A.optional(),
});

export type B = z.infer<typeof B>;

export const A = z.object({
  b: B.optional(),
});

export type A = z.infer<typeof A>;

// Path Functions
export const paths = {
} as const;

// Operation Objects"
`;

exports[`OpenAPIGenerator Edge cases handles empty spec: empty-spec-output 1`] = `
"import { z } from "zod";

// Path Functions
export const paths = {
} as const;

// Operation Objects"
`;
